apps/oxlint/src/snapshots/_fixtures__cli__glimmer__template-only.gjs@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: fixtures/cli/glimmer/template-only.gjs
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 95 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
